# electric_and_hybrid_vehicles_analysis

./: .gitignore  pyproject.toml
notebooks/: 02_ML_model.ipynb  03_ACP.ipynb  04_ACM.ipynb  eda_electric_vehicles.ipynb
